cluster/config/rxresume/rxresume.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rxresume
  annotations:
    app: rxresume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rxresume-postgres
  namespace: rxresume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rxresume
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "rxresume"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        app: rxresume
    spec:
      serviceAccountName: rxresume
      containers:
        - name: postgres
          image: postgres:alpine
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /var/lib/postgres
              name: rxresume-postgres
          ports:
            - name: sql
              containerPort: 5432
              protocol: TCP
      restartPolicy: Always
      volumes:
      - name: "rxresume-postgres"
        persistentVolumeClaim:
          claimName: rxresume-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rxresume-server
  namespace: rxresume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rxresume
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "rxresume"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        app: rxresume
    spec:
      serviceAccountName: rxresume
      containers:
        - name: rxresume-server
          image: amruthpillai/reactive-resume:server-v3.6.8
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: public-key
              mountPath: "/etc/ssl/certs/kube-cert.crt"
              subPath: "kube-home.crt"
              readOnly: true
              name: public-key
          ports:
            - name: http
              containerPort: 3100
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: "public-key"
          configMap:
            name: wildcard-kube-home-distribution
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rxresume-client
  namespace: rxresume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rxresume
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "rxresume"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        app: rxresume
    spec:
      serviceAccountName: rxresume
      containers:
        - name: rxresume-client
          image: amruthpillai/reactive-resume:client-v3.6.8
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: public-key
              mountPath: "/etc/ssl/certs/kube-cert.crt"
              subPath: "kube-home.crt"
              readOnly: true
              name: public-key
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: "public-key"
          configMap:
            name: wildcard-kube-home-distribution
---
apiVersion: v1
kind: Service
metadata:
  name: rxresume-postgres
  namespace: rxresume
  labels:
    app: rxresume
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: sql
  selector:
    app: rxresume
---
apiVersion: v1
kind: Service
metadata:
  name: rxresume-server
  namespace: rxresume
  labels:
    app: rxresume
spec:
  type: ClusterIP
  ports:
    - port: 3100
      name: http
  selector:
    app: rxresume
---
apiVersion: v1
kind: Service
metadata:
  name: rxresume-client
  namespace: rxresume
  labels:
    app: rxresume
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: http
  selector:
    app: rxresume
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rxresume
  namespace: rxresume
  annotations:
    kubernetes.io/ingress.class: "nginx"
    hajimari.io/enable: "true"
    hajimari.io/icon: file-account
    hajimari.io/appName: RxResume
    hajimari.io/group: Dev
  labels:
    app: rxresume
spec:
  tls:
  - hosts:
    - resume.kube.home
  rules:
  - host: resume.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rxresume-client
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rxresume-server
  namespace: rxresume
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: rxresume
spec:
  tls:
  - hosts:
    - resume-api.kube.home
  rules:
  - host: resume-api.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rxresume-server
            port:
              number: 3100
